Se agrega fallback sobre la ultima lectura a OWM conocida
